--- a/star-wars/main.html
+++ b/star-wars/main.html
@@ -36,14 +36,23 @@
             <span class="material-icons btn-view-page table">list</span>
           </div>
         </div>
-        <div class="wrapper-films">
-          <div class="loader-div">
-
-          </div>
+        <div class="wrapper-films"></div>
         </div>
         </div>
       </div>
     </main>
+    <div class="popup-pets animate__animated" id="popup-pets">
+      <div class="popup__body">
+        <div class="popup-content">
+          <h2>favorite films</h2>
+          <div class="popup-content-films"></div>
+          <div class="popup-close"></div>
+        </div>
+      </div>
+    </div>
+    <div class="loader">
+      <img src="./assets/img/preloaders/loader.gif" alt="loader" />
+    </div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
